Add v0.0.1 Alpha subheading to Hero

--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 -->
 <div class="opr-container">
     <div class="opr-page opr-current first" data-target="1">
-        <div id="hero">
-        <h1>
+        <div id="hero" class="home">
+        <h1 
+        title="v0.0.1 alpha">
             FEATHER
         </h1>
         <p class="animate fadeIn">
