--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                        <div class="opr-next"></div>
     </div>
     <div class="opr-page sixth" data-target="6">
-                        <pre class="language-markup"> <code class="language-markup">&lt;!-- Make a row with everything in the center --&gt;
+                        <pre class="language-markup"> <code class="language-markup">&lt;!-- Link to Feather --&gt;
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css&quot;/&gt;
+&lt;!-- Make a row with everything in the center --&gt;
 &lt;div class=&quot;row text-center&quot;&gt;
   &lt;div class=&quot;pull-left animate bounce infinite&quot;&gt;
     Feather
