--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Project 180 Days</title>
+		<meta name="description" content="Feather | A lightweight framework to make websites as light as a feather" />
+		<meta name="keywords" content="css, html, framework, js, javascript, lightweight, library, css library, css framework, minimal css framework, lightweight css framework, lightweight css library, css buttons, css components, css grid, css animations" />
+		<meta name="author" content="Kabir Shah" />
     <title>Feather</title>
     <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/feather.css"/>
