--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           	<option value="fadeIn">fadeIn</option>
      	 </select>
     </div>
-      <button class="js--triggerAnimation">Animate it</button>
+      <button class="js--triggerAnimation btn btn-1">Animate it</button>
     </form>
                        <div class="opr-next"></div>
     </div>
