--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 -    <script src="js/clipboard.min.js"></script>
  <script src="js/opr.js"></script>
 -<script>
--	new Clipboard('.c-btn');
+-	var clipboard = new Clipboard('.c-btn');
 -</script>
 
 </body>
