--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <script src="js/prism.min.js"></script>
 -    <script src="js/clipboard.min.js"></script>
  <script src="js/opr.js"></script>
--<script>
--new Clipboard('.c-btn');
--</script>
+<script>
+	new Clipboard('.c-btn');
+</script>
 
 </body>
 </html>
