--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
     <script src="js/prism.min.js"></script>
--    <script src="js/clipboard.min.js"></script>
+    <script src="js/clipboard.min.js"></script>
  <script src="js/opr.js"></script>
 <script>
 	new Clipboard('.c-btn');
