--- a/index.html
+++ b/index.html
@@ -244,7 +244,25 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
 &lt;/div&gt;</code></pre>
-<button class="c-btn btn btn-2" data-clipboard-text="#code-demo">Copy to Clipboard</button>
+<button class="c-btn btn btn-2" data-clipboard-text="<!-- Link to Feather -->
+<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css"/>
+<!-- Make a row with everything in the center -->
+<div class="row text-center">
+  <div class="pull-left animate bounce infinite">
+    Feather
+  </div>
+<!-- Buttons => Add class btn + btn-(1-5) -->
+<button class="btn btn-[1-5] ">Button</button>
+<!-- Space => Put a type of space-->
+<div class="small-space"></div>
+<div class="space"></div>
+<div class="xtra-small-space"></div>
+<!-- Range => Add class range + blue-->
+<input type="range" min="-100" max="0" value="0" class="range blue"/>
+<!-- Checkbox -->
+<input type="checkbox" name="checkbox" id="checkbox:checkbox-1"/>
+    <label for="checkbox:checkbox-1" class="checkbox-label">Checkbox</label>
+</div>">Copy to Clipboard</button>
         <p>&nbsp;</p>
     </div>
 </div>
