--- a/index.html
+++ b/index.html
@@ -244,25 +244,25 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
 &lt;/div&gt;</code></pre>
-<button class="c-btn btn btn-2" data-clipboard-text="<!-- Link to Feather -->
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css"/>
-<!-- Make a row with everything in the center -->
-<div class="row text-center">
-  <div class="pull-left animate bounce infinite">
+<button class="c-btn btn btn-2" data-clipboard-text="&lt;!-- Link to Feather --&gt;
+&lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css&quot;/&gt;
+&lt;!-- Make a row with everything in the center --&gt;
+&lt;div class=&quot;row text-center&quot;&gt;
+  &lt;div class=&quot;pull-left animate bounce infinite&quot;&gt;
     Feather
-  </div>
-<!-- Buttons => Add class btn + btn-(1-5) -->
-<button class="btn btn-[1-5] ">Button</button>
-<!-- Space => Put a type of space-->
-<div class="small-space"></div>
-<div class="space"></div>
-<div class="xtra-small-space"></div>
-<!-- Range => Add class range + blue-->
-<input type="range" min="-100" max="0" value="0" class="range blue"/>
-<!-- Checkbox -->
-<input type="checkbox" name="checkbox" id="checkbox:checkbox-1"/>
-    <label for="checkbox:checkbox-1" class="checkbox-label">Checkbox</label>
-</div>">Copy to Clipboard</button>
+  &lt;/div&gt;
+&lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
+&lt;button class=&quot;btn btn-[1-5] &quot;&gt;Button&lt;/button&gt;
+&lt;!-- Space =&gt; Put a type of space--&gt;
+&lt;div class=&quot;small-space&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;space&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;xtra-small-space&quot;&gt;&lt;/div&gt;
+&lt;!-- Range =&gt; Add class range + blue--&gt;
+&lt;input type=&quot;range&quot; min=&quot;-100&quot; max=&quot;0&quot; value=&quot;0&quot; class=&quot;range blue&quot;/&gt;
+&lt;!-- Checkbox --&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
+    &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
+&lt;/div&gt;">Copy to Clipboard</button>
         <p>&nbsp;</p>
     </div>
 </div>
