--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css&quot;/&gt;
 &lt;!-- Make a row with everything in the center --&gt;
 &lt;div class=&quot;row text-center&quot;&gt;
-  &lt;div class=&quot;pull-left animate bounce infinite&quot;&gt;
+  &lt;div class=&quot;animate bounce infinite&quot;&gt;
     Feather
   &lt;/div&gt;
 &lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
@@ -248,7 +248,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css&quot;/&gt;
 &lt;!-- Make a row with everything in the center --&gt;
 &lt;div class=&quot;row text-center&quot;&gt;
-  &lt;div class=&quot;pull-left animate bounce infinite&quot;&gt;
+  &lt;div class=&quot;animate bounce infinite&quot;&gt;
     Feather
   &lt;/div&gt;
 &lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
