--- a/index.html
+++ b/index.html
@@ -152,14 +152,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <form class="components"> 
   <div class="text-center">
       <h1>
-          Range 
+          Component(s)
       </h1>
-      <div class="xtra-small-space"></div>
-
-      <br>
-        <input type="range" min="-100" max="0" value="0" class="range blue"/>
-      <div class="small-space"></div>
-      <div class="xtra-small-space"></div>
        
       <br>
           <input type="checkbox" name="checkbox" id="checkbox:checkbox-1"/>
@@ -233,13 +227,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     Feather
   &lt;/div&gt;
 &lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
-&lt;button class=&quot;btn btn-[1-5] &quot;&gt;Button&lt;/button&gt;
+&lt;button class=&quot;btn btn-1 &quot;&gt;Button&lt;/button&gt;
 &lt;!-- Space =&gt; Put a type of space--&gt;
 &lt;div class=&quot;small-space&quot;&gt;&lt;/div&gt;
 &lt;div class=&quot;space&quot;&gt;&lt;/div&gt;
 &lt;div class=&quot;xtra-small-space&quot;&gt;&lt;/div&gt;
-&lt;!-- Range =&gt; Add class range + blue--&gt;
-&lt;input type=&quot;range&quot; min=&quot;-100&quot; max=&quot;0&quot; value=&quot;0&quot; class=&quot;range blue&quot;/&gt;
 &lt;!-- Checkbox --&gt;
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
@@ -252,13 +244,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     Feather
   &lt;/div&gt;
 &lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
-&lt;button class=&quot;btn btn-[1-5] &quot;&gt;Button&lt;/button&gt;
+&lt;button class=&quot;btn btn-1 &quot;&gt;Button&lt;/button&gt;
 &lt;!-- Space =&gt; Put a type of space--&gt;
 &lt;div class=&quot;small-space&quot;&gt;&lt;/div&gt;
 &lt;div class=&quot;space&quot;&gt;&lt;/div&gt;
 &lt;div class=&quot;xtra-small-space&quot;&gt;&lt;/div&gt;
-&lt;!-- Range =&gt; Add class range + blue--&gt;
-&lt;input type=&quot;range&quot; min=&quot;-100&quot; max=&quot;0&quot; value=&quot;0&quot; class=&quot;range blue&quot;/&gt;
 &lt;!-- Checkbox --&gt;
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
