--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <div class="opr-next"></div>
     </div>
     <div class="opr-page fourth" data-target="4">
+    	<div class="container">
               <div class='grid text-center'>
         <div class='row'>
           <div class='span one dark'>ONE</div><div class='span eleven light'>ELEVEN</div>
@@ -196,6 +197,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         </div>
         <div class='row'>
           <div class='span eleven dark'>ELEVEN</div><div class='span one light'>ONE</div>
+        </div>
         </div>
       </div>
         <div class="opr-next"></div>
