--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <div class="opr-container">
     <div class="opr-page opr-current first" data-target="1">
         <div id="hero" class="home">
+        	          <img src="img/feather.svg">
         <h1 
         title="v0.0.2 alpha">
             FEATHER
