--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </form>
                        <div class="opr-next"></div>
     </div>
-    <div class="opr-page-f sixth" data-target="6">
+    <div class="opr-page footer sixth" data-target="6">
                         <pre class="language-markup"> <code class="language-markup" id="code-demo">&lt;!-- Link to Feather --&gt;
 &lt;link rel=&quot;stylesheet&quot; type=&quot;text/css&quot; href=&quot;https://raw.githubusercontent.com/KingPixil/Feather/gh-pages/feather.min.css&quot;/&gt;
 &lt;!-- Make a row with everything in the center --&gt;
