--- a/index.html
+++ b/index.html
@@ -124,7 +124,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             FEATHER
         </h1>
         <p class="animate fadeIn">
-            A lightweight framework to design websites...fast
+            A lightweight framework to design websites...fast<br>
+            <span class="love">
+    Made with <i class="fa fa-heart pulse"></i> by 
+  <a href="https://about.me/kabirshah" target="_blank">Kabir Shah</a>
+</span>
         </p>
                     </div>
         <div class="opr-next1"></div>
