--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 		<meta name="keywords" content="css, html, framework, js, javascript, lightweight, library, css library, css framework, minimal css framework, lightweight css framework, lightweight css library, css buttons, css components, css grid, css animations" />
 		<meta name="author" content="Kabir Shah" />
     <title>Feather</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css"/>
         <link rel="stylesheet" href="css/feather.css"/>
         <link rel="stylesheet" href="css/codestyle.css"/>
