--- a/index.html
+++ b/index.html
@@ -143,14 +143,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                     Buttons
                 </h1>
                 <div class="row">
-  <button class="btn btn-1">btn-1</button>
-  <button class="btn btn-2">btn-2</button>
-  <button class="btn btn-3">btn-3</button>
-  <button class="btn btn-4">btn-4</button>
-  </div>
-  <div class="row">
-  <button class="btn btn-5">btn-5</button>
-  <button class="btn btn-6">btn-6</button>
+  <button class="btn btn-outline">btn-1</button>
+  <button class="btn btn-3d">btn-2</button>
+  <button class="btn btn-round">btn-3</button>
+  <button class="btn btn-gradient">btn-4</button>
   </div>
 </div>
 <div class="small-space"></div>
@@ -236,12 +232,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   &lt;div class=&quot;animate bounce infinite&quot;&gt;
     Feather
   &lt;/div&gt;
-&lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
-&lt;button class=&quot;btn btn-1 &quot;&gt;Button&lt;/button&gt;
-&lt;!-- Space =&gt; Put a type of space--&gt;
-&lt;div class=&quot;small-space&quot;&gt;&lt;/div&gt;
-&lt;div class=&quot;space&quot;&gt;&lt;/div&gt;
-&lt;div class=&quot;xtra-small-space&quot;&gt;&lt;/div&gt;
+&lt;!-- Buttons =&gt; Add class btn + btn-outline, btn-3d, btn-round, or btn-gradient --&gt;
+&lt;button class=&quot;btn btn-3d &quot;&gt;Button&lt;/button&gt;
 &lt;!-- Checkbox --&gt;
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
@@ -253,12 +245,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   &lt;div class=&quot;animate bounce infinite&quot;&gt;
     Feather
   &lt;/div&gt;
-&lt;!-- Buttons =&gt; Add class btn + btn-(1-5) --&gt;
-&lt;button class=&quot;btn btn-1 &quot;&gt;Button&lt;/button&gt;
-&lt;!-- Space =&gt; Put a type of space--&gt;
-&lt;div class=&quot;small-space&quot;&gt;&lt;/div&gt;
-&lt;div class=&quot;space&quot;&gt;&lt;/div&gt;
-&lt;div class=&quot;xtra-small-space&quot;&gt;&lt;/div&gt;
+&lt;!-- Buttons =&gt; Add class btn + btn-outline, btn-3d, btn-round, or btn-gradient --&gt;
+&lt;button class=&quot;btn btn-3d &quot;&gt;Button&lt;/button&gt;
 &lt;!-- Checkbox --&gt;
 &lt;input type=&quot;checkbox&quot; name=&quot;checkbox&quot; id=&quot;checkbox:checkbox-1&quot;/&gt;
     &lt;label for=&quot;checkbox:checkbox-1&quot; class=&quot;checkbox-label&quot;&gt;Checkbox&lt;/label&gt;
