--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                     Buttons
                 </h1>
                 <div class="row">
-  <button class="btn btn-outline">btn-1</button>
-  <button class="btn btn-3d">btn-2</button>
-  <button class="btn btn-round">btn-3</button>
-  <button class="btn btn-gradient">btn-4</button>
+  <button class="btn btn-outline">btn-outline</button>
+  <button class="btn btn-3d">btn-3d</button>
+  <button class="btn btn-round">btn-round</button>
+  <button class="btn btn-gradient">btn-gradient</button>
   </div>
 </div>
 <div class="small-space"></div>
