--- a/index.html
+++ b/index.html
@@ -231,9 +231,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;!-- Make a row with everything in the center --&gt;
 &lt;div class=&quot; row text-center &quot;&gt;
   &lt;div class=&quot;animate bounce infinite &quot;&gt;
-    &lt;h1&gt;
-    Feather
-    &lt;/h1&gt;
+    &lt;h1&gt;Feather&lt;/h1&gt;
   &lt;/div&gt;
   &lt;div class=&quot;row text-center&quot;&gt;
     &lt;!-- Buttons =&gt; Add class btn + btn-outline, btn-3d, btn-round, or btn-gradient --&gt;
@@ -259,9 +257,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 &lt;!-- Make a row with everything in the center --&gt;
 &lt;div class=&quot; row text-center &quot;&gt;
   &lt;div class=&quot;animate bounce infinite &quot;&gt;
-    &lt;h1&gt;
-    Feather
-    &lt;/h1&gt;
+    &lt;h1&gt;Feather&lt;/h1&gt;
   &lt;/div&gt;
   &lt;div class=&quot;row text-center&quot;&gt;
     &lt;!-- Buttons =&gt; Add class btn + btn-outline, btn-3d, btn-round, or btn-gradient --&gt;
