Added NPM support

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 		<meta name="author" content="Kabir Shah" />
     <title>Feather</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css"/>
-        <link rel="stylesheet" href="css/feather.css"/>
-        <link rel="stylesheet" href="css/codestyle.css"/>
+    <link rel="stylesheet" href="demo/css/main.css"/>
+        <link rel="stylesheet" href="dist/css/feather.css"/>
+        <link rel="stylesheet" href="demo/css/codestyle.css"/>
 </head>
 <body>
     <!--
@@ -119,7 +119,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 <div class="opr-container">
     <div class="opr-page opr-current first" data-target="1">
         <div id="hero" class="home">
-        	          <img src="img/feather.svg">
+        	          <img src="demo/img/feather.svg">
         <h1 
         title="v0.0.6 alpha">
             FEATHER
@@ -282,10 +282,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="js/jquery.touchSwipe.min.js"></script>
-    <script src="js/prism.min.js"></script>
-    <script src="js/clipboard.min.js"></script>
- <script src="js/opr.js"></script>
+<script src="demo/js/jquery.touchSwipe.min.js"></script>
+    <script src="demo/js/prism.min.js"></script>
+    <script src="demo/js/clipboard.min.js"></script>
+ <script src="demo/js/opr.js"></script>
 <script>
 	new Clipboard('.c-btn');
 </script>
