--- a/index.html
+++ b/index.html
@@ -167,41 +167,53 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <div class="opr-next"></div>
     </div>
     <div class="opr-page fourth" data-target="4">
-    	<div class="container">
-              <div class='grid text-center'>
-        <div class='row'>
-          <div class='span one dark'>ONE</div><div class='span eleven light'>ELEVEN</div>
+    	<div class="docs-section" id="grid">
+      <h6 class="docs-header">The grid</h6>
+      <p>The grid is a <u>12-column fluid grid with a max width of 960px</u>, that shrinks with the browser/device at smaller sizes. The max width can be changed with one line of CSS and all columns will resize accordingly. The syntax is simple and it makes coding responsive much easier. Go ahead, resize the browser. </p>
+      <div class="example-grid docs-example">
+        <div class="row">
+          <div class="one column">One</div>
+          <div class="eleven columns">Eleven</div>
         </div>
-        <div class='row'>
-          <div class='span two dark'>TWO</div><div class='span ten light'>TEN</div>
+        <div class="row">
+          <div class="two columns">Two</div>
+          <div class="ten columns">Ten</div>
         </div>
-        <div class='row'>
-          <div class='span three dark'>THREE</div><div class='span nine light'>NINE</div>
+        <div class="row">
+          <div class="three columns">Three</div>
+          <div class="nine columns">Nine</div>
         </div>
-        <div class='row'>
-          <div class='span four dark'>FOUR</div><div class='span eight light'>EIGHT</div>
+        <div class="row">
+          <div class="four columns">Four</div>
+          <div class="eight columns">Eight</div>
         </div>
-        <div class='row'>
-          <div class='span five dark'>FIVE</div><div class='span seven light'>SEVEN</div>
+        <div class="row">
+          <div class="five columns">Five</div>
+          <div class="seven columns">Seven</div>
         </div>
-        <div class='row'>
-          <div class='span six dark'>SIX</div><div class='span six light'>SIX</div>
+        <div class="row">
+          <div class="six columns">Six</div>
+          <div class="six columns">Six</div>
         </div>
-        <div class='row'>
-          <div class='span seven dark'>SEVEN</div><div class='span five light'>FIVE</div>
+        <div class="row">
+          <div class="seven columns">Seven</div>
+          <div class="five columns">Five</div>
         </div>
-        <div class='row'>
-          <div class='span eight dark'>EIGHT</div><div class='span four light'>FOUR</div>
+        <div class="row">
+          <div class="eight columns">Eight</div>
+          <div class="four  columns">Four</div>
         </div>
-        <div class='row'>
-          <div class='span nine dark'>NINE</div><div class='span three light'>THREE</div>
+        <div class="row">
+          <div class="nine columns">Nine</div>
+          <div class="three columns">Three</div>
         </div>
-        <div class='row'>
-          <div class='span ten dark'>TEN</div><div class='span two light'>TWO</div>
+        <div class="row">
+          <div class="ten columns">Ten</div>
+          <div class="two columns">Two</div>
         </div>
-        <div class='row'>
-          <div class='span eleven dark'>ELEVEN</div><div class='span one light'>ONE</div>
-        </div>
+        <div class="row">
+          <div class="eleven columns">Eleven</div>
+          <div class="one column">One</div>
         </div>
       </div>
         <div class="opr-next"></div>
